@@ -1,5 +1,7 @@
 Revision history for Perl module DateTime::Format::Epoch
 
+    - Move to Module::Build
+
 0.11  2007-12-04
     - Tried to make code work with Math::BigInt::* packages (tries to
       solve bug reported by Philip (Flip) Kromer)
